# mech-interp-codebase

./: .gitignore  README.md  REFERENCES.md  pyproject.toml  references.json  requirements.txt
notebooks/: 00_setup_smoke_test.ipynb  01_residual_stream.ipynb  02_sae_features.ipynb  03_attribution.ipynb
src/mech_interp/: __init__.py
