# Pinned by scaffolding-code-projects from a Perplexity research pass.
# Re-run the research pass before bumping any pin without a recorded reason.
[project]
name = "mech-interp-codebase"
version = "0.1.0"
description = "Personal-fluency mech-interp: residual streams, SAE features, attribution graphs over Gemma-2-2B."
requires-python = ">=3.11"
dependencies = [
    # import name is transformer_lens (underscore); install PyTorch CPU wheels first on macOS
    "transformer-lens==3.2.1",
    # load Gemma Scope via SAE.from_pretrained(release='gemma-scope-2b-pt-res-canonical', sae_id='layer_<L>/width_16k/canonical')
    "sae-lens==6.43.0",
    # now on PyPI as of 2026 (previously git-only); installs both TransformerLens and NNsight backends by default
    "circuit-tracer==0.5.0",
    # required so VS Code / Cursor can pick the .venv up as a notebook kernel
    "ipykernel",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "numpy>=2.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mech_interp"]

[tool.uv]
# Install the local src/mech_interp/ as an editable dep so notebooks share
# one model-loading code path and one in-kernel model instance.
package = true
